--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -13,166 +13,155 @@
     tools:context="com.siriporn.dogfindertest.DogAddInfoActivity"
     tools:showIn="@layout/activity_dog_add_info">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-        <ImageView
-            android:layout_width="185dp"
-            android:layout_height="148dp"
-            app:srcCompat="@drawable/camera2"
-            android:id="@+id/captureView"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            app:layout_constraintTop_toTopOf="parent" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/nameText"
-            android:textAlignment="center"
-            android:hint="Dog's name"
-            android:background="@color/com_facebook_button_background_color_selected"
-            android:padding="10dp"
-            android:textSize="24sp"
-            android:textStyle="normal|bold"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintHorizontal_bias="0.61"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/captureButton" />
+            <ImageView
+                android:layout_width="175dp"
+                android:layout_height="121dp"
+                app:srcCompat="@drawable/camera2"
+                android:id="@+id/captureView"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="16dp"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="183dp"
-            android:layout_height="30dp"
-            android:ems="10"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/nameText"
-            app:layout_constraintRight_toLeftOf="@+id/searchMydog"
-            android:id="@+id/breedText"
-            app:layout_constraintLeft_toLeftOf="@+id/nameText" />
+            <EditText
+                android:layout_width="384dp"
+                android:layout_height="46dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/nameText"
+                android:textAlignment="center"
+                android:hint="Dog's name"
+                android:background="@color/com_facebook_button_background_color_selected"
+                android:padding="10dp"
+                android:textSize="24sp"
+                android:textStyle="normal|bold"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/captureButton"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
-        <EditText
-            android:layout_width="170dp"
-            android:layout_height="120dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/noticeText"
-            android:textAlignment="center"
-            android:hint="Write here..."
-            android:textSize="14sp"
-            android:gravity="top|left"
-            android:background="@color/com_facebook_button_background_color_focused"
-            app:layout_constraintLeft_toLeftOf="@+id/FBUser"
-            app:layout_constraintRight_toRightOf="@+id/FBUser"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/FBUser" />
+            <TextView
+                android:layout_width="258dp"
+                android:layout_height="31dp"
+                android:ems="10"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:id="@+id/breedText"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/nameText"
+                app:layout_constraintRight_toLeftOf="@+id/searchMydog"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
-        <ImageButton
-            android:layout_width="102dp"
-            android:layout_height="70dp"
-            app:srcCompat="@drawable/ic_search36dp"
-            android:id="@+id/searchMydog"
-            android:onClick="searchClicked"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/nameText"
-            app:layout_constraintRight_toRightOf="@+id/nameText" />
+            <EditText
+                android:layout_width="372dp"
+                android:layout_height="42dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/noticeText"
+                android:textAlignment="center"
+                android:hint="Write here..."
+                android:textSize="14sp"
+                android:gravity="top|left"
+                android:background="@color/com_facebook_button_background_color_focused"
+                app:layout_constraintLeft_toLeftOf="@+id/FBUser"
+                app:layout_constraintRight_toRightOf="@+id/FBUser"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@+id/FBUser"
+                android:layout_marginTop="8dp" />
 
-        <ImageButton
-            android:scaleType="fitCenter"
-            android:layout_width="104dp"
-            app:srcCompat="@drawable/mapbutton"
-            android:id="@+id/AddLoc"
-            android:background="@color/cast_expanded_controller_ad_label_background_color"
-            android:layout_height="120dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintRight_toRightOf="@+id/textView5"
-            android:onClick="Add" />
+            <ImageButton
+                android:layout_width="102dp"
+                android:layout_height="70dp"
+                app:srcCompat="@drawable/ic_search36dp"
+                android:id="@+id/searchMydog"
+                android:onClick="searchClicked"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/nameText"
+                app:layout_constraintRight_toRightOf="@+id/nameText" />
 
-        <Button
-            android:text="Next"
-            android:layout_width="291dp"
-            android:layout_height="48dp"
-            android:id="@+id/acceptdog"
-            android:background="@color/colorPrimary"
-            android:onClick="nextClicked"
-            app:layout_constraintTop_toBottomOf="@+id/noticeText"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp" />
+            <ImageButton
+                android:layout_width="65dp"
+                android:layout_height="67dp"
+                android:id="@+id/acceptdog"
+                android:background="@drawable/oval"
+                android:elevation="10dp"
+                android:layout_alignParentBottom="true"
+                android:onClick="nextClicked"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/addcircle"/>
 
-        <TextView
-            android:text="Location"
-            android:layout_width="102dp"
-            android:layout_height="32dp"
-            android:id="@+id/textView5"
-            android:textSize="14sp"
-            android:background="@color/com_facebook_button_background_color_focused_disabled"
-            android:textColor="@color/cardview_light_background"
-            android:padding="8dp"
-            android:gravity="center_vertical|center_horizontal"
-            app:layout_constraintRight_toRightOf="@+id/searchMydog"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/searchMydog" />
+            <Button
+                android:text="ADD"
+                android:layout_width="188dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/captureButton"
+                app:layout_constraintTop_toBottomOf="@+id/captureView"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="16dp" />
 
-        <Button
-            android:text="ADD"
-            android:layout_width="188dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/captureButton"
-            app:layout_constraintTop_toBottomOf="@+id/captureView"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp" />
+            <TextView
+                android:text="Noticeable"
+                android:layout_width="373dp"
+                android:layout_height="32dp"
+                android:id="@+id/FBUser"
+                android:background="@color/com_facebook_button_background_color_focused_disabled"
+                android:padding="8dp"
+                android:gravity="center_vertical|center_horizontal"
+                app:layout_constraintLeft_toLeftOf="@+id/ageText"
+                android:textColor="@color/cardview_light_background"
+                app:layout_constraintRight_toRightOf="@+id/searchMydog"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/ageText" />
 
-        <TextView
-            android:text="Noticeable"
-            android:layout_width="170dp"
-            android:layout_height="32dp"
-            android:id="@+id/FBUser"
-            android:background="@color/com_facebook_button_background_color_focused_disabled"
-            android:padding="8dp"
-            android:gravity="center_vertical|center_horizontal"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
-            app:layout_constraintLeft_toLeftOf="@+id/ageText"
-            android:textColor="@color/cardview_light_background" />
+            <EditText
+                android:layout_width="259dp"
+                android:layout_height="39dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/ageText"
+                android:hint="Age"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                app:layout_constraintLeft_toLeftOf="@+id/breedText"
+                app:layout_constraintRight_toRightOf="@+id/breedText"
+                app:layout_constraintTop_toBottomOf="@+id/breedText" />
 
-        <EditText
-            android:layout_width="184dp"
-            android:layout_height="40dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/ageText"
-            android:hint="Age"
-            app:layout_constraintTop_toBottomOf="@+id/breedText"
-            android:textSize="14sp"
-            android:textAlignment="center"
-            app:layout_constraintLeft_toLeftOf="@+id/breedText"
-            app:layout_constraintRight_toLeftOf="@+id/searchMydog" />
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="377dp"
+                android:layout_height="138dp"
+                tools:context="com.siriporn.dogfindertest.MapsActivity"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/noticeText" />
 
-    </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
 </RelativeLayout>
