--- a/app/src/main/res/layout/content_my_dog_detail.xml
+++ b/app/src/main/res/layout/content_my_dog_detail.xml
@@ -107,25 +107,14 @@
             android:padding="8dp"
             app:layout_constraintHorizontal_bias="1.0"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_width="138dp"
+            android:layout_width="363dp"
             app:layout_constraintLeft_toLeftOf="@+id/nameUser"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/emailUser"
-            android:textColor="@color/cardview_light_background" />
-
-        <TextView
-            android:text="Location"
-            android:layout_height="36dp"
-            android:id="@+id/textView5"
-            android:textSize="14sp"
-            android:background="@color/com_facebook_button_background_color_focused_disabled"
             android:textColor="@color/cardview_light_background"
-            android:padding="8dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_width="138dp"
-            app:layout_constraintRight_toRightOf="@+id/nameUser"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/emailUser" />
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp" />
 
         <FrameLayout
             android:id="@+id/mapContainer"
@@ -135,8 +124,8 @@
             app:layout_constraintTop_toBottomOf="@+id/emailUser"/>
 
         <TextView
-            android:layout_width="138dp"
-            android:layout_height="124dp"
+            android:layout_width="363dp"
+            android:layout_height="64dp"
             android:ems="10"
             android:id="@+id/noticeText"
             android:textAlignment="center"
@@ -148,17 +137,17 @@
             app:layout_constraintTop_toBottomOf="@+id/FBUser"
             app:layout_constraintHorizontal_bias="0.0" />
 
-        <ImageView
-            android:layout_width="138dp"
-            app:srcCompat="@drawable/mapbutton"
-            android:id="@+id/ShowLoc"
-            android:background="@color/cast_expanded_controller_ad_label_background_color"
-            android:layout_height="124dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintRight_toRightOf="@+id/textView5"
-            app:layout_constraintLeft_toLeftOf="@+id/textView5"
-            app:layout_constraintHorizontal_bias="0.0" />
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="363dp"
+            android:layout_height="138dp"
+            tools:context="com.siriporn.dogfindertest.MapsActivity"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/noticeText" />
 
     </android.support.constraint.ConstraintLayout>
 
