--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -35,7 +35,7 @@
             app:layout_constraintHorizontal_bias="0.52" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="51dp"
             android:inputType="textPersonName"
             android:ems="10"
@@ -56,22 +56,66 @@
             android:textColor="@color/cast_expanded_controller_text_color"
             android:layout_marginTop="20dp" />
 
-        <!--
+
+
+
         <TextView
             android:layout_width="280dp"
             android:layout_height="37dp"
             android:ems="10"
-            android:id="@+id/emailUser"
+            android:id="@+id/email_user"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@+id/nameUser"
             app:layout_constraintLeft_toLeftOf="@+id/nameUser"
             android:padding="5dp"
             android:background="@color/com_facebook_button_background_color_disabled"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintRight_toRightOf="@+id/nameUser"
             android:textSize="16sp" />
 
         <TextView
+            android:layout_width="280dp"
+            android:layout_height="37dp"
+            android:ems="10"
+            android:id="@+id/birth_user"
+            android:textAlignment="center"
+            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
+            android:padding="5dp"
+            android:background="@color/com_facebook_button_background_color_disabled"
+            app:layout_constraintRight_toRightOf="@+id/nameUser"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/phone_user" />
+
+        <TextView
+            android:layout_width="280dp"
+            android:layout_height="37dp"
+            android:ems="10"
+            android:id="@+id/phone_user"
+            android:textAlignment="center"
+            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
+            android:padding="5dp"
+            android:background="@color/com_facebook_button_background_color_disabled"
+            app:layout_constraintRight_toRightOf="@+id/nameUser"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/email_user" />
+
+        <TextView
+            android:layout_width="280dp"
+            android:layout_height="37dp"
+            android:ems="10"
+            android:id="@+id/lastLogin_user"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@+id/birth_user"
+            app:layout_constraintLeft_toLeftOf="@+id/nameUser"
+            android:padding="5dp"
+            android:background="@color/com_facebook_button_background_color_disabled"
+            android:layout_marginTop="8dp"
+            app:layout_constraintRight_toRightOf="@+id/nameUser"
+            android:textSize="16sp" />
+
+<!--        <TextView
             android:text="Facebook"
             android:layout_height="52dp"
             android:id="@+id/FBUser"
