--- a/app/src/main/res/layout/list_item_lost.xml
+++ b/app/src/main/res/layout/list_item_lost.xml
@@ -67,7 +67,8 @@
             android:background="@color/cast_intro_overlay_button_background_color"
             app:layout_constraintLeft_toLeftOf="@+id/noticeLostPost"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:scaleType="fitXY"/>
 
         <TextView
             android:id="@+id/breedLostPost"
