--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_my_dog"
             android:icon="@drawable/user"
-            android:title="My Dog Account" />
+            android:title="My Dog" />
         <item
             android:id="@+id/nav_lost"
             android:icon="@drawable/losticon"
