--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/activity_margin"
-    android:layout_marginEnd="@dimen/activity_margin"
-    android:layout_marginStart="@dimen/activity_margin"
-    android:layout_marginTop="@dimen/activity_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
     android:background="#f8f8f9"
     android:orientation="vertical"
     tools:context="com.siriporn.dogfindertest.RegisterActivity">
